Vantaa-job-board-ize

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>React starter!</title>
+    <title>Vantaan työpaikat - React + Axios</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
   </head>
   <body>
     <div id="app"></div>
